--- a/popup/popUp.css
+++ b/popup/popUp.css
@@ -1,26 +1,29 @@
-*{
-
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
 button {
-    /* border: none; */
-    padding: 0.2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: none;
-    margin-right: 5px;
-    border-radius: 5px;
-    background-color: white;
-    cursor: pointer;
+  /* border: none; */
+  padding: 0.2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: none;
+  margin-right: 5px;
+  border-radius: 5px;
+  background-color: white;
+  cursor: pointer;
 }
 
-div{
-    display: flex;
-    justify-content: space-around;
+input {
+  min-width: 200px;
 }
 
-h3{
-    text-align: center;
+div {
+  display: flex;
+  justify-content: space-around;
+}
+
+h3 {
+  text-align: center;
 }
